server/infrastructure/k8s/networking/billtime-server-networking-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-access-policy
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - protocol: TCP
      port: 80
    from:
    - podSelector: {}
  egress:
  - ports:
    - protocol: TCP
      port: 3306
